CSS cursor update in table.

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,11 @@ li {
 .visible-row {
   display: table-row;
 }
+
+td:hover {
+  cursor: pointer;
+}
+
 td.no-border {
   border: none;
   border: 0;
